--- a/function_exercises.ipynb
+++ b/function_exercises.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 71,
    "id": "3f6faa16",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
     "#Define a function named is_vowel. \n",
     "#It should return True if the passed string is a vowel, False otherwise.\n",
     "def is_vowel(z):\n",
-    "    if z in ['a', 'e', 'i', 'o', 'u']:\n",
+    "    if z.lower() in ['a', 'e', 'i', 'o', 'u']:\n",
     "        return True\n",
     "    else:\n",
     "        return False\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 72,
    "id": "b5735260",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
     "#passed string is a consonant, False otherwise. \n",
     "#Use your is_vowel function to accomplish this.\n",
     "def is_consonant(z):\n",
-    "    if z not in ['a', 'e', 'i', 'o', 'u']:\n",
+    "    if z.lower() not in ['a', 'e', 'i', 'o', 'u']:\n",
     "        return True\n",
     "    else:\n",
     "        return False\n",
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 73,
    "id": "7e3a9596",
    "metadata": {},
    "outputs": [
@@ -153,17 +153,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tip Percent: 100\n",
-      "Total Bill: 100\n"
+      "Tip Percent: 50\n",
+      "Total Bill: 100\n",
+      "Your tip should be : 50.0\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "200.0"
+       "150.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,13 +173,15 @@
     "def calculate_tip():\n",
     "    tip = (int(input('Tip Percent: '))) / 100\n",
     "    bill = int(input('Total Bill: '))\n",
-    "    return (bill * tip) + bill\n",
+    "    should_tip = (bill * tip)\n",
+    "    print(f'Your tip should be : {should_tip}')\n",
+    "    return should_tip + bill\n",
     "calculate_tip()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "10db31d1",
    "metadata": {},
    "outputs": [
@@ -186,35 +189,226 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tip Percent: 100\n",
-      "Total Bill: 100\n"
+      "Price of item: 10.00\n",
+      "Discount percent: 20\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'bill' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [9]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTotal Bill: \u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m (bill \u001b[38;5;241m*\u001b[39m tip) \u001b[38;5;241m+\u001b[39m bill\n\u001b[0;32m----> 5\u001b[0m \u001b[43mcalculate_tip\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Input \u001b[0;32mIn [9]\u001b[0m, in \u001b[0;36mcalculate_tip\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m (\u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTip Percent: \u001b[39m\u001b[38;5;124m'\u001b[39m))) \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m100\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTotal Bill: \u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m (\u001b[43mbill\u001b[49m \u001b[38;5;241m*\u001b[39m tip) \u001b[38;5;241m+\u001b[39m bill\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'bill' is not defined"
+     "data": {
+      "text/plain": [
+       "8.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Define a function named apply_discount. It should accept a original price, \n",
+    "#and a discount percentage, and return the price after the discount is applied.\n",
+    "\n",
+    "def apply_discount():\n",
+    "    original = float(input('Price of item: '))\n",
+    "    discount = (float(input('Discount percent: '))) / 100\n",
+    "    return original - (original * discount)\n",
+    "apply_discount()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f906e821",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Any number with commas -> 1,000,000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'1000000'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Define a function named handle_commas. \n",
+    "#It should accept a string that is a number that contains commas in it as input, \n",
+    "#and return a number as output.\n",
+    "\n",
+    "def handle_commas():\n",
+    "    num_com = input('Any number with commas -> ').replace(\",\", \"\")\n",
+    "    return num_com\n",
+    "handle_commas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ab275ca3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Put number grade here: 120\n",
+      "You're not that smart!\n",
+      "Put number grade here: 100\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'A'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Define a function named get_letter_grade. \n",
+    "#It should accept a number and return the letter grade associated with that number (A-F).\n",
+    "\n",
+    "def get_letter_grade():\n",
+    "    num_grade = int(input('Put number grade here: '))\n",
+    "    if 100 >= num_grade >= 90:\n",
+    "        return 'A'\n",
+    "    elif 90 > num_grade >= 80:\n",
+    "        return 'B'\n",
+    "    elif 80 > num_grade >= 70:\n",
+    "        return 'C'\n",
+    "    elif 70 > num_grade >= 60:\n",
+    "        return 'D'\n",
+    "    elif num_grade < 60:\n",
+    "        return 'F'\n",
+    "    else:\n",
+    "        print('You\\'re not that smart!')\n",
+    "        return get_letter_grade()\n",
+    "get_letter_grade()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "d2253717",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zbr\n"
      ]
     }
    ],
    "source": [
-    "def calculate_tip():\n",
-    "    (int(input('Tip Percent: '))) / 100\n",
-    "    int(input('Total Bill: '))\n",
-    "    return (bill * tip) + bill\n",
-    "calculate_tip()\n"
+    "def remove_vowels(string):\n",
+    "    for x in string.lower():\n",
+    "        if x in vowels:\n",
+    "            string = string.replace(x, \"\")\n",
+    "    print(string)\n",
+    "remove_vowels('Zebra')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "59c84b99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vowels = ['A', 'E', 'I', 'O', 'U', 'a', 'e', 'i', 'o', 'u']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "303c7323",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'andy_j'"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Define a function named normalize_name. It should accept a string and return a valid python identifier, \n",
+    "#that is:\n",
+    "#anything that is not a valid python identifier should be removed\n",
+    "#leading and trailing whitespace should be removed\n",
+    "#everything should be lowercase\n",
+    "#spaces should be replaced with underscores\n",
+    "#for example:\n",
+    "#Name will become name\n",
+    "#First Name will become first_name\n",
+    "#% Completed will become completed\n",
+    "\n",
+    "def normalize_name(name):\n",
+    "    name = name.replace(\"$\", \"\")\n",
+    "    name = name.replace(\"%\", \"\")\n",
+    "    name = name.replace(\"!\", \"\")\n",
+    "    name = name.replace(\"?\", \"\")\n",
+    "    name = name.replace(\" \", \"_\")\n",
+    "    name = name.lower()\n",
+    "    return(name)\n",
+    "normalize_name('A!n?dy J?')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "3fd33a2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 6, 10, 15, 20]"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Write a function named cumulative_sum that accepts a list of numbers \n",
+    "#and returns a list that is the cumulative sum of the numbers in the list.\n",
+    "#cumulative_sum([1, 1, 1]) returns [1, 2, 3]\n",
+    "#cumulative_sum([1, 2, 3, 4]) returns [1, 3, 6, 10]\n",
+    "\n",
+    "def cumulative_sum(nums):\n",
+    "    output = []\n",
+    "    total = 0\n",
+    "    for num in nums:\n",
+    "        total += num\n",
+    "        output.append(total)\n",
+    "    return output\n",
+    "cumulative_sum([1, 2, 3, 4, 5, 5])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f906e821",
+   "id": "fbb451c5",
    "metadata": {},
    "outputs": [],
    "source": []
