--- a/function_exercises.ipynb
+++ b/function_exercises.ipynb
@@ -170,7 +170,7 @@
     }
    ],
    "source": [
-    "def calculate_tip():\n",
+    "def calculate_tip(x):\n",
     "    tip = (int(input('Tip Percent: '))) / 100\n",
     "    bill = int(input('Total Bill: '))\n",
     "    should_tip = (bill * tip)\n",
@@ -280,7 +280,7 @@
     "#Define a function named get_letter_grade. \n",
     "#It should accept a number and return the letter grade associated with that number (A-F).\n",
     "\n",
-    "def get_letter_grade():\n",
+    "def get_letter_grade(z):\n",
     "    num_grade = int(input('Put number grade here: '))\n",
     "    if 100 >= num_grade >= 90:\n",
     "        return 'A'\n",
@@ -294,7 +294,7 @@
     "        return 'F'\n",
     "    else:\n",
     "        print('You\\'re not that smart!')\n",
-    "        return get_letter_grade()\n",
+    "        return get_letter_grade(z)\n",
     "get_letter_grade()"
    ]
   },
